  * New upstream release.
  * Remove patches already applied upstream:
    - mysql_free_results_when_qsqlquery_finished_is_called.patch
    - qdockwidget_undocked_notification.diff
    - docs_fixes.diff
    - postgresql_12.diff
    - uic_global_includes.diff
    - riscv.diff
  * Refresh patches:
    - gnukfreebsd.diff
    - gnukfreebsd_linker_warnings.diff
    - nonlinux_utime.diff

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 28 Jan 2020 21:51:33 -0300

qtbase-opensource-src (5.12.5+dfsg-7) unstable; urgency=medium

  * Changeless upload to allow arch:all binary packages being built after
    passing NEW queue.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 23 Jan 2020 09:08:39 -0300

qtbase-opensource-src (5.12.5+dfsg-6) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Split the doxygen .tags files into a new qtbase5-doc-dev package,
    see #922707.
  * Make relevant development packages depend upon
    qtbase5-dev | qtbase5-gles-dev. This allows building packages with either of
    them (Closes: #949028).

  [ Helmut Grohne ]
  * Improve cross building: (Closes: #876131)
    + Pass --external-hostbindir to use the native qmake.
    + Pass a cross platform_arg.
    + Verify that the qmake self-dependency exactly matches the version.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 22 Jan 2020 14:54:20 -0300

qtbase-opensource-src (5.12.5+dfsg-5) unstable; urgency=medium

  [ Pino Toscano ]
  * Limit the libdrm-dev build dependency as linux-any, as it is only useful
    on Linux. (Closes: #947675)

  [ Dmitry Shachnev ]
  * Backport upstream patch to add RISC-V detection.
  * Update debian/libqt5network5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 31 Dec 2019 14:19:15 +0300

qtbase-opensource-src (5.12.5+dfsg-4) unstable; urgency=medium

  * Build-depend on libdrm-dev and libxcb-glx0-dev, to fix FTBFS.
