@@ -13,6 +13,7 @@ qtbase-opensource-src (5.14.1+dfsg-1) UNRELEASED; urgency=medium
     - gnukfreebsd.diff
     - gnukfreebsd_linker_warnings.diff
     - nonlinux_utime.diff
+    - qdoc_default_incdirs.diff
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 28 Jan 2020 21:51:33 -0300
 
